syntax = "proto3";

package chat;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/chat-app-grpc;chat_app_grpc";


service ChatService{
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){
    option (google.api.http) = {
      post: "/v1/CreateUser"
      body: "*"
    };
  }

  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse){
    option (google.api.http) = {
      post: "/v1/DeleteUser"
      body: "*"
    };
  }
  
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse){
    option (google.api.http) = {
      post: "/v1/UpdateUser"
      body: "*"
    };
  }

  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse){
    option (google.api.http) = {
      get: "/v1/GetAllUsers"
    };
  }


  rpc GetUser(GetUserRequest) returns (GetUserResponse){
    option (google.api.http) = {
      get: "/v1/GetUser/*"
    };
  }
  rpc GetChatMessages(GetChatMessagesRequest) returns (GetChatMessagesResponse){
    option (google.api.http) = {
      get: "/v1/GetChatMessages/*"
    };
  }

  rpc SendChatMessage(SendChatMessageRequest) returns (SendChatMessageResponse){
    option (google.api.http) = {
      post: "/v1/SendChatMessage"
      body: "*"
    };
  }

  rpc DeleteAllUsers(DeleteAllUsersRequest) returns (DeleteAllUsersResponse){
    option (google.api.http) = {
      post: "/v1/DeleteAllUsers"
      body: "*"
    };
  }

  rpc DropTable(DropTableRequest) returns (DropTableResponse){
    option (google.api.http) = {
      post: "/v1/DropTable"
      body: "*"
    };
  }


}


message User {
  string id=1;
  string full_name=2;
  string username=3;
}

message CreateUserRequest {
  string full_name=1;
  string username=2;
  string hash_token=3;
}

message CreateUserResponse {
  User user = 1;
}

message DeleteUserRequest{
  string username = 1;
}

message DeleteUserResponse{
  User user = 1;
}

message GetUserRequest{
  string username = 1;
  string hash_token = 2;
}
message GetUserResponse{
  User user = 1;
}


message UpdateUserRequest {
  string username=1;
  map<string, string> updated_fields=2;
}

message UpdateUserResponse {
  User user = 1;
}

message GetAllUsersRequest{
}
message GetAllUsersResponse{
  repeated User users = 1;
}

// Messages 

message ChatMessage {
  google.protobuf.Timestamp timestamp = 1;
  string sender = 2;
  string recipient = 3;
  string text = 4;
}

message GetChatMessagesRequest {
  string sender_id = 1;
  string recipient_id = 2;
}
message GetChatMessagesResponse {
  repeated ChatMessage messages = 1;
}

message SendChatMessageRequest {
  ChatMessage message = 1;
}


message SendChatMessageResponse {
  ChatMessage messages = 1;
}

message DropTableRequest {
  string table_name = 1;
}

message DropTableResponse{
}

message DeleteAllUsersRequest{

}

message DeleteAllUsersResponse{
}

